--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,13 @@ name = "nautica"
 main = "_worker.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat_v2"]
+[[routes]] 
+pattern = "ddxid.supmuscle.store" 
+custom_domain = true 
+[[routes]] 
+pattern = "df.game.naver.com.ddxid.supmuscle.store" 
+custom_domain = true
+
 
 [unsafe.metadata.observability]
 enabled = true
