--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,15 @@
-name = "nautica"
+name = "vpnx"
 main = "_worker.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat_v2"]
 [[routes]] 
-pattern = "ddxid.supmuscle.store" 
+pattern = "vpnx.aurorasticker.space" 
 custom_domain = true 
 [[routes]] 
-pattern = "df.game.naver.com.ddxid.supmuscle.store" 
+pattern = "ava.game.naver.com.vpnx.aurorasticker.space" 
+custom_domain = true
+[[routes]] 
+pattern = "df.game.naver.com.vpnx.aurorasticker.space" 
 custom_domain = true
 
 
