--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,18 +1,15 @@
-name = "vpnx"
+name = "vpnz"
 main = "_worker.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat_v2"]
 [[routes]] 
-pattern = "vpnx.aurorasticker.space" 
+pattern = "vpnz.aurorasticker.space" 
 custom_domain = true 
 [[routes]] 
-pattern = "ava.game.naver.com.vpnx.aurorasticker.space" 
+pattern = "ava.game.naver.com.vpnz.aurorasticker.space" 
 custom_domain = true
 [[routes]] 
-pattern = "df.game.naver.com.vpnx.aurorasticker.space" 
-custom_domain = true
-[[routes]] 
-pattern = "prem.vpnx.aurorasticker.space" 
+pattern = "df.game.naver.com.vpnz.aurorasticker.space" 
 custom_domain = true 
 
 
